{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 13,
  "lineage": "3c530a61-e495-7c4c-a1e6-117eb4e8211b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nextjs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0af6e2b3ada249943",
            "arn": "arn:aws:ec2:us-west-2:654654523743:instance/i-02fb54762ffb17488",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02fb54762ffb17488",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0159edf859f538c9c",
            "private_dns": "ip-10-0-1-249.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.249",
            "public_ip": "34.219.65.8",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-090a619ed546aff17",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0374845c97d95805d",
            "tags": {
              "Name": "Nextjs"
            },
            "tags_all": {
              "Name": "Nextjs"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0573fc629a4826744"
            ]
          },
          "dependencies": [
            "aws_security_group.webserver",
            "aws_subnet.subnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:654654523743:internet-gateway/igw-0fd3ff44710abe3a8",
            "id": "igw-0fd3ff44710abe3a8",
            "owner_id": "654654523743",
            "tags": {
              "Name": "Main",
              "Owner": "nextjs"
            },
            "tags_all": {
              "Name": "Main",
              "Owner": "nextjs"
            },
            "vpc_id": "vpc-08a1acae7bd8ba640"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:654654523743:route-table/rtb-0cc52f63be9fca843",
            "id": "rtb-0cc52f63be9fca843",
            "owner_id": "654654523743",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fd3ff44710abe3a8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public"
            },
            "tags_all": {
              "Name": "Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a1acae7bd8ba640"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b432679d91b7bd91",
            "route_table_id": "rtb-0cc52f63be9fca843",
            "subnet_id": "subnet-0374845c97d95805d"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.rt1",
            "aws_subnet.subnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d3f3f32b1091be6c",
            "route_table_id": "rtb-0cc52f63be9fca843",
            "subnet_id": "subnet-039f5f67099d5f99c"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.rt1",
            "aws_subnet.subnet2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:654654523743:security-group/sg-0573fc629a4826744",
            "description": "Webserver network traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0573fc629a4826744",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "80 from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "143.58.213.36/32"
                ],
                "description": "SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Webserver",
            "name_prefix": "",
            "owner_id": "654654523743",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow traffic"
            },
            "tags_all": {
              "Name": "Allow traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a1acae7bd8ba640"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:654654523743:subnet/subnet-0374845c97d95805d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0374845c97d95805d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654523743",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet1",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "Subnet1",
              "Type": "Public"
            },
            "vpc_id": "vpc-08a1acae7bd8ba640"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:654654523743:subnet/subnet-039f5f67099d5f99c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-039f5f67099d5f99c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654523743",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet2",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "Subnet2",
              "Type": "Public"
            },
            "vpc_id": "vpc-08a1acae7bd8ba640"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:654654523743:vpc/vpc-08a1acae7bd8ba640",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0854192d958c1878d",
            "default_route_table_id": "rtb-0b8e91e898f2ce913",
            "default_security_group_id": "sg-06fc49676c761df11",
            "dhcp_options_id": "dopt-0019aef5c1241c081",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08a1acae7bd8ba640",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b8e91e898f2ce913",
            "owner_id": "654654523743",
            "tags": {
              "Demo": "Terraform",
              "Name": "Nextjs"
            },
            "tags_all": {
              "Demo": "Terraform",
              "Name": "Nextjs"
            }
          }
        }
      ]
    }
  ]
}